--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dw-env-switcher",
   "displayName": "DW Environment Switcher",
   "description": "Switch and manage Salesforce sandbox environments easily with global credential storage.",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "publisher": "IvayloTrepetanov",
   "repository": {
     "type": "git",
@@ -22,7 +22,9 @@
     "onCommand:dw-env-switcher.selectSandbox",
     "onCommand:dw-env-switcher.selectSandboxWithDetails",
     "onCommand:dw-env-switcher.deleteSavedUsername",
-    "onCommand:dw-env-switcher.deleteSavedSandbox"
+    "onCommand:dw-env-switcher.deleteSavedSandbox",
+    "onCommand:dw-env-switcher.exportSetup",
+    "onCommand:dw-env-switcher.importSetup"
   ],
   "contributes": {
     "commands": [
@@ -41,6 +43,14 @@
       {
         "command": "dw-env-switcher.deleteSavedSandbox",
         "title": "Delete Saved Sandbox"
+      },
+      {
+        "command": "dw-env-switcher.exportSetup",
+        "title": "Export Sandbox Setup"
+      },
+      {
+        "command": "dw-env-switcher.importSetup",
+        "title": "Import Sandbox Setup"
       }
     ]
   },
@@ -50,8 +60,13 @@
     "watch": "tsc -w -p ./"
   },
   "devDependencies": {
-    "@types/vscode": "^1.80.0",
+    "@types/archiver": "^6.0.3",
     "@types/node": "^18.0.0",
+    "@types/vscode": "^1.80.0",
     "typescript": "^5.0.0"
+  },
+  "dependencies": {
+    "archiver": "^7.0.1",
+    "unzipper": "^0.12.3"
   }
 }
