--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "icon": "icon.png",
     "main": "./out/extension.js",
     "engines": {
-      "vscode": "^1.70.0"
+      "vscode": "^1.80.0"
     },
     "keywords": [
       "salesforce",
@@ -26,7 +26,7 @@
     ],
     "categories": [
       "Other",
-      "Development Tools"
+      "Debuggers"
     ],
     "activationEvents": [
       "onCommand:dw-env-switcher.selectSandbox",
@@ -41,7 +41,8 @@
       "onCommand:dw-env-switcher.addNewSandbox",
       "onCommand:dw-env-switcher.changeCartridges",
       "onCommand:dw-env-switcher.changeUser",
-      "onCommand:dw-env-switcher.sandboxActions"
+      "onCommand:dw-env-switcher.sandboxActions",
+      "onCommand:dw-env-switcher.changeSavedPassword"
     ],
     "contributes": {
       "menus": {
@@ -129,6 +130,10 @@
         {
           "command": "dwEnvSwitcherView.refresh",
           "title": "Refresh Sandbox View"
+        },
+        {
+            "command": "dw-env-switcher.changeSavedPassword",
+            "title": "Change Saved Password"
         }
       ]
     },
