--- a/package.json
+++ b/package.json
@@ -2,155 +2,156 @@
     "name": "dw-env-switcher",
     "displayName": "DW Environment Switcher",
     "description": "Easily switch and manage Salesforce sandbox environments, store credentials securely, and export/import setups.",
-    "version": "0.1.5",
+    "version": "0.1.6",
     "publisher": "IvayloTrepetanov",
     "repository": {
-      "type": "git",
-      "url": "https://github.com/interfan/dw-env-switcher"
+        "type": "git",
+        "url": "https://github.com/interfan/dw-env-switcher"
     },
     "license": "MIT",
     "icon": "icon.png",
     "main": "./out/extension.js",
     "engines": {
-      "vscode": "^1.80.0"
+        "vscode": "^1.80.0"
     },
     "keywords": [
-      "salesforce",
-      "sandbox",
-      "environment",
-      "switcher",
-      "dw",
-      "credentials",
-      "developer",
-      "commerce cloud"
+        "salesforce",
+        "sandbox",
+        "environment",
+        "switcher",
+        "dw",
+        "credentials",
+        "developer",
+        "commerce cloud"
     ],
     "categories": [
-      "Other",
-      "Debuggers"
+        "Other",
+        "Debuggers"
     ],
     "activationEvents": [
-      "onCommand:dw-env-switcher.selectSandbox",
-      "onCommand:dw-env-switcher.selectSandboxWithDetails",
-      "onCommand:dw-env-switcher.deleteSavedUsername",
-      "onCommand:dw-env-switcher.deleteSavedSandbox",
-      "onCommand:dw-env-switcher.exportSetup",
-      "onCommand:dw-env-switcher.importSetup",
-      "onCommand:dw-env-switcher.switchCodeVersion",
-      "onCommand:dw-env-switcher.deleteSandboxFromView",
-      "onCommand:dwEnvSwitcherView.refresh",
-      "onCommand:dw-env-switcher.addNewSandbox",
-      "onCommand:dw-env-switcher.changeCartridges",
-      "onCommand:dw-env-switcher.changeUser",
-      "onCommand:dw-env-switcher.sandboxActions",
-      "onCommand:dw-env-switcher.changeSavedPassword"
+        "onCommand:dw-env-switcher.selectSandbox",
+        "onCommand:dw-env-switcher.selectSandboxWithDetails",
+        "onCommand:dw-env-switcher.deleteSavedUsername",
+        "onCommand:dw-env-switcher.deleteSavedSandbox",
+        "onCommand:dw-env-switcher.exportSetup",
+        "onCommand:dw-env-switcher.importSetup",
+        "onCommand:dw-env-switcher.switchCodeVersion",
+        "onCommand:dw-env-switcher.deleteSandboxFromView",
+        "onCommand:dwEnvSwitcherView.refresh",
+        "onCommand:dw-env-switcher.addNewSandbox",
+        "onCommand:dw-env-switcher.changeCartridges",
+        "onCommand:dw-env-switcher.changeUser",
+        "onCommand:dw-env-switcher.sandboxActions",
+        "onCommand:dw-env-switcher.changeSavedPassword"
     ],
     "contributes": {
-      "menus": {
-        "view/title": [
-          {
-            "command": "dw-env-switcher.addNewSandbox",
-            "when": "view == dwEnvSwitcherView",
-            "group": "navigation"
-          }
-        ],
-        "view/item/context": [
-          {
-            "command": "dw-env-switcher.sandboxActions",
-            "when": "view == dwEnvSwitcherView && viewItem == sandbox",
-            "group": "inline"
-          }
+        "menus": {
+            "view/title": [
+                {
+                    "command": "dw-env-switcher.addNewSandbox",
+                    "when": "view == dwEnvSwitcherView",
+                    "group": "navigation"
+                }
+            ],
+            "view/item/context": [
+                {
+                    "command": "dw-env-switcher.sandboxActions",
+                    "when": "view == dwEnvSwitcherView && viewItem == sandbox",
+                    "group": "inline"
+                }
+            ]
+        },
+        "viewsContainers": {
+            "activitybar": [
+                {
+                    "id": "dwEnvSwitcher",
+                    "title": "DW Environment Switcher",
+                    "icon": "icon.svg"
+                }
+            ]
+        },
+        "views": {
+            "dwEnvSwitcher": [
+                {
+                    "id": "dwEnvSwitcherView",
+                    "name": "Sandboxes"
+                }
+            ]
+        },
+        "commands": [
+            {
+                "command": "dw-env-switcher.selectSandbox",
+                "title": "Select Sandbox"
+            },
+            {
+                "command": "dw-env-switcher.selectSandboxWithDetails",
+                "title": "Select Sandbox (Detailed)"
+            },
+            {
+                "command": "dw-env-switcher.changeCartridges",
+                "title": "Change Cartridges"
+            },
+            {
+                "command": "dw-env-switcher.switchCodeVersion",
+                "title": "Change Code Version"
+            },
+            {
+                "command": "dw-env-switcher.changeUser",
+                "title": "Change User"
+            },
+            {
+                "command": "dw-env-switcher.deleteSandboxFromView",
+                "title": "Delete Sandbox From View"
+            },
+            {
+                "command": "dw-env-switcher.deleteSavedSandbox",
+                "title": "Delete Saved Sandbox"
+            },
+            {
+                "command": "dw-env-switcher.exportSetup",
+                "title": "Export Sandbox Setup"
+            },
+            {
+                "command": "dw-env-switcher.importSetup",
+                "title": "Import Sandbox Setup"
+            },
+            {
+                "command": "dw-env-switcher.addNewSandbox",
+                "title": "Add New Sandbox"
+            },
+            {
+                "command": "dw-env-switcher.sandboxActions",
+                "title": "Sandbox Actions"
+            },
+            {
+                "command": "dw-env-switcher.deleteSavedUsername",
+                "title": "Delete Saved Username"
+            },
+            {
+                "command": "dwEnvSwitcherView.refresh",
+                "title": "Refresh Sandbox View"
+            },
+            {
+                "command": "dw-env-switcher.changeSavedPassword",
+                "title": "Change Saved Password"
+            }
         ]
-      },
-      "viewsContainers": {
-        "activitybar": [
-          {
-            "id": "dwEnvSwitcher",
-            "title": "DW Environment Switcher",
-            "icon": "icon.svg"
-          }
-        ]
-      },
-      "views": {
-        "dwEnvSwitcher": [
-          {
-            "id": "dwEnvSwitcherView",
-            "name": "Sandboxes"
-          }
-        ]
-      },
-      "commands": [
-        {
-          "command": "dw-env-switcher.selectSandbox",
-          "title": "Select Sandbox"
-        },
-        {
-          "command": "dw-env-switcher.selectSandboxWithDetails",
-          "title": "Select Sandbox (Detailed)"
-        },
-        {
-          "command": "dw-env-switcher.changeCartridges",
-          "title": "Change Cartridges"
-        },
-        {
-          "command": "dw-env-switcher.switchCodeVersion",
-          "title": "Change Code Version"
-        },
-        {
-          "command": "dw-env-switcher.changeUser",
-          "title": "Change User"
-        },
-        {
-          "command": "dw-env-switcher.deleteSandboxFromView",
-          "title": "Delete Sandbox From View"
-        },
-        {
-          "command": "dw-env-switcher.deleteSavedSandbox",
-          "title": "Delete Saved Sandbox"
-        },
-        {
-          "command": "dw-env-switcher.exportSetup",
-          "title": "Export Sandbox Setup"
-        },
-        {
-          "command": "dw-env-switcher.importSetup",
-          "title": "Import Sandbox Setup"
-        },
-        {
-          "command": "dw-env-switcher.addNewSandbox",
-          "title": "Add New Sandbox"
-        },
-        {
-          "command": "dw-env-switcher.sandboxActions",
-          "title": "Sandbox Actions"
-        },
-        {
-          "command": "dw-env-switcher.deleteSavedUsername",
-          "title": "Delete Saved Username"
-        },
-        {
-          "command": "dwEnvSwitcherView.refresh",
-          "title": "Refresh Sandbox View"
-        },
-        {
-            "command": "dw-env-switcher.changeSavedPassword",
-            "title": "Change Saved Password"
-        }
-      ]
     },
     "scripts": {
-      "vscode:prepublish": "npm run compile",
-      "compile": "tsc -p ./",
-      "watch": "tsc -w -p ./"
+        "vscode:prepublish": "npm run compile",
+        "compile": "tsc -p ./",
+        "watch": "tsc -w -p ./",
+        "bundle": "esbuild src/extension.ts --bundle --platform=node --outfile=out/extension.js"
     },
     "devDependencies": {
-      "@types/archiver": "^6.0.3",
-      "@types/node": "^18.0.0",
-      "@types/vscode": "^1.80.0",
-      "typescript": "^5.0.0"
+        "@types/archiver": "^6.0.3",
+        "@types/node": "^18.0.0",
+        "@types/vscode": "^1.80.0",
+        "esbuild": "^0.25.4",
+        "typescript": "^5.0.0"
     },
     "dependencies": {
-      "archiver": "^7.0.1",
-      "unzipper": "^0.12.3"
+        "archiver": "^7.0.1",
+        "unzipper": "^0.12.3"
     }
-  }
-  
+}
