--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,29 +1,40 @@
-# Ignore source files
-src/**
-test/**
-tests/**
-.vscode/**
-tsconfig.json
-tslint.json
-README.md~
-CHANGELOG.md~
+# Exclude all files from node_modules
+node_modules/*
+
+# Exclude all files in the src directory (because TypeScript code will be compiled/bundled)
+src/*
+
+# Exclude test files and directories
+test/*
+*.test.ts
+*.spec.ts
+
+# Exclude build output (like TypeScript build artifacts, and other build-related files)
+out/*
+*.ts
 *.map
 
-# Ignore node_modules except production deps
-node_modules/**
-!node_modules/archiver/**
-!node_modules/unzipper/**
+# Exclude markdown documentation (if not needed for the marketplace)
+README.md
+LICENSE.md
+CHANGELOG.md
 
-# Ignore dev dependencies
-**/node_modules/@types/**
-**/node_modules/typescript/**
-**/node_modules/.bin/**
+# Exclude any IDE configuration files (e.g., from VS Code, JetBrains IDEs, etc.)
+.vscode/
 
-# Ignore hidden files and git
-.git/**
-*.gitignore
-*.gitattributes
+# Exclude package-lock.json and yarn.lock (since dependencies will be installed on the machine where it's running)
+package-lock.json
+yarn.lock
 
-# Ignore output folders
-out/test/**
-out/**/*.map
+# Exclude the .git directory if it's present
+.git/
+
+# Include necessary files (ensure you keep these included):
+!.vscodeignore  # Keep this file
+!package.json   # Package file for the extension
+!out/*          # The output from Webpack (bundled code)
+!README.md      # Include the README file for the marketplace
+!LICENSE.md     # Include the license file for the marketplace
+!tsconfig.json  # TypeScript configuration file if needed for build
+!icon.png       # Extension icon
+!out/extension.js
